--- a/index.html
+++ b/index.html
@@ -14,6 +14,39 @@
 </head>
 <body>
 
+    <!-- cabecera -->
+
+
+    <header>
+
+        <nav>
+<a href="./index.html"> <img src="./imagenes/Captura de pantalla (35).png" alt=""></a>
+
+<li>  <a href="./index.html">Inicio-Florecer</a></li>
+  
+
+
+<li>  <a href="./Red de apoyo"> Agenda tu consulta online </a></li>
+
+
+<li>   <a href="madres"> Talleres </a></li>
+
+<li>  <a href="red de apoyo"> Tips mamás</a></li>
+
+        </nav>
+
+<img src="./imagenes/plena.jpg" alt="">
+
+
+
+
+    </header>
+
+<!-- seccion -->
+
+
+
+
     <!-- Todo lo visible para el usuario y se puede interactuar.títulos, imagenes, párrafos,videos, audios -->
 <!-- etiquetas para la estructura html -->   
 <header></header>    <!--permite definir la cabecera logotipo y barra  --> 
@@ -40,10 +73,15 @@
 </ol>
 <ul>
     <li>Psicología Clínica</li>
+
     <li>Psicología infantil</li>
+
     <li>Soy adolescente</li>
+
     <li>Neuropsicología educativa</li>
+
     <li>orientación profesional durante el embarazo</li>
+
     <li>psicología del deporte</li>
 </ul>
     
@@ -51,21 +89,39 @@
     <!-- semantica de texto -->
 
 
-<a href=""></a> <!-- hipervinculo -->
+<a href=""></a><!-- hipervinculo -->
 
-<img src="imagenes/descarga.jpg" alt="arroz"/>
+<video src=""></video>
+
+
+
+<a href="./Madres.html"  target="_blank"> <img src="./imagenes/embaraz.jpg" alt=""></a>
+
+<a href="./Madres.html"  target="_blank"> Soy mujer</a> <!-- hipervinculo -->
+
+<a href="./imagenes/madr.jpg" target="_blank"> <img src="./imagenes/" alt=""></a>
+
+<a href="./Madres.html" target="_blank"> <img src="./imagenes/mam.jpg" alt=""></a>
+
+
+
+<img src="imagenes/descarga.jpg" alt="madres"/>
+
 
 <a href="./index.html"> <img src="./index.html" alt=""> </a>
 
 <p> Podrás contar con la asesoría y el acompañamiento de un psicólogo especialista según tu caso y con su ayuda disipar dudas e inquitudes y trabajar en ti desde tus diferentes áreas de crecimiento para que puedas florecer con plenitud en tus diferentes áreas personales. </p>
 <cite> Realizado por Nohemy Mape Vanegas</cite> <!-- etiqueta para citar -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6GoOfN8Jjfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 <mark> ¡Registrese!</mark>
 
 <p> las mujeres gestantes pasan por diferentes cambios físicos y psicológicos que les genera inquietudes y está bien pedir ayuda profesional para que la gestación sea un camino de florecimiento aprendizzaje y plenitud </p>
 
+<mark> Talleres on line </mark>
+<p> Suscribete y asiste a los talleres para mujeres gestantes, porque sabemos que en esta etapa te asaltan las dudas, podemos acompañarte y orientarte con todos los cuidades de tu salud mental y la de tu bebé en gestación.</p>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hOu1hlPIgrU?start=581" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
